Attempt 1 getting images to work

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li>A tag name</li>
             <li>Required or optional attributes</li>
         </ul>
-        <img src="lab2-files/element.png"
+        <img src="element.png"
         <break></break>
         <p>It can be easier to understand what is going on in your code if you have it nicely formatted. In this HTML each nested element is indented by four spaces more than the one it is sitting inside. It is up to you to choose the style of formatting (how many spaces for each level of indentation, for example).</p>
         <p>In Visual Studio Code, you can automatically format your code by following these steps:</p>
@@ -42,7 +42,7 @@
         <p>CSS is a rule-based language — you define the rules by specifying groups of styles that should be applied to particular elements or groups of elements on your web page.</p>
         <break></break>
         <p>For example, you can decide to have the main heading on your page to be shown as large red text. The following code shows a very simple CSS rule that would achieve the styling described above:</p>
-        <img src="/Lab2/lab2-files/css.png"
+        <img src="css.png"
     </section>
     <section id="JavaScript">
         <h1>JavaScript</h1>
@@ -55,10 +55,10 @@
             <li>Perform operations on pieces of text (known as "strings" in programming)</li>
             <li>Run code in response to certain events occuring on a web page - for example, a user clicking a button</li>
         </ul>
-        <img src="lab2-files/script.png"
+        <img src="script.png"
         <break></break>
         <p>What is even more exciting however is the functionality built on top of the client-side JavaScript language. So-called Application Programming Interfaces (APIs) provide you with extra superpowers to use in your JavaScript code.</p>
         <p>APIs are ready-made sets of code building blocks that allow a developer to implement programs that would otherwise be hard or impossible to implement. They do the same thing for programming that ready-made furniture kits do for home building — it is much easier to take ready-cut panels and screw them together to make a bookshelf than it is to work out the design yourself, go and find the correct wood, cut all the panels to the right size and shape, find the correct-sized screws, and then put them together to make a bookshelf.</p>
     </section>
 </body>
-</html>
+</html
