--- a/week3/LAB3/index.html
+++ b/week3/LAB3/index.html
@@ -20,7 +20,7 @@
 </section>
 <section id="about-me">    
 <h3>ABOUT ME</h3>
-    <p>Hello! I am a new web developer trying to figure this out. I am 23 years old and from the Okanagan. I have 2 dogs and 2 cats. I love gaming, skiing, watching hockey, and playing soccer</p>
+    <p>Hello! I am a new web developer trying to figure this out. I am 23 years old and from the Okanagan. I have 2 dogs and 2 cats. I love gaming, skiing, watching hockey, and playing soccer.</p>
 </section>
 <section id="skills">
     <h3>SKILLS</h3>
